--- a/app/dev/module/main/main.html
+++ b/app/dev/module/main/main.html
@@ -74,13 +74,13 @@
 
     <footer id="footer">
 
-        <ul class="f-menu">
-            <li><a href="">About</a></li>
-            <!--<li><a href="">Dashboard</a></li>-->
-            <!--<li><a href="">Reports</a></li>-->
-            <!--<li><a href="">Support</a></li>-->
-            <li><a href="">Contact</a></li>
-        </ul>
+        <!--<ul class="f-menu">-->
+            <!--<li><a href="">About</a></li>-->
+            <!--&lt;!&ndash;<li><a href="">Dashboard</a></li>&ndash;&gt;-->
+            <!--&lt;!&ndash;<li><a href="">Reports</a></li>&ndash;&gt;-->
+            <!--&lt;!&ndash;<li><a href="">Support</a></li>&ndash;&gt;-->
+            <!--<li><a href="">Contact</a></li>-->
+        <!--</ul>-->
         &copy; 2015 scripturedin
     </footer>
 
