Fixed build bug for wysiwyg image files. Refactored app-controller. Add tip alert for auto-save on new note. Create new app_constant and app_service services. Fixed issues with search bar and headers. Now displays an alert if scripture text can't be parsed. And forces page on search .

--- a/app/dev/index.html
+++ b/app/dev/index.html
@@ -38,7 +38,10 @@
     <!--<link href="css/demo.css" rel="stylesheet">-->
 
 </head>
-<body ng-class="{overflow: appCtrl.sideMenu, 'gray-body': $state.current.name.indexOf('base') >= 0}">
+<body ng-class="{overflow: appCtrl.sideMenu,
+                'sw-toggled': $state.current.name != 'main' && appCtrl.appService.layout == 1,
+                'gray-body': $state.current.name.indexOf('base') >= 0
+                }">
 
 <div ui-view autoscroll='true'></div>
 
