--- a/app/dev/module/main/main.html
+++ b/app/dev/module/main/main.html
@@ -17,7 +17,9 @@
             <div>
                 <ul class="header-inner">
 
-                    <li class="menu-trigger" id="menu-trigger" ng-click="appCtrl.sideMenu=true">
+                    <li class="menu-trigger"
+                        id="menu-trigger"
+                        ng-click="appCtrl.sideMenu=true">
                         <div class="line-wrap">
                             <div class="line top"></div>
                             <div class="line center"></div>
@@ -75,11 +77,11 @@
     <footer id="footer">
 
         <!--<ul class="f-menu">-->
-            <!--<li><a href="">About</a></li>-->
-            <!--&lt;!&ndash;<li><a href="">Dashboard</a></li>&ndash;&gt;-->
-            <!--&lt;!&ndash;<li><a href="">Reports</a></li>&ndash;&gt;-->
-            <!--&lt;!&ndash;<li><a href="">Support</a></li>&ndash;&gt;-->
-            <!--<li><a href="">Contact</a></li>-->
+        <!--<li><a href="">About</a></li>-->
+        <!--&lt;!&ndash;<li><a href="">Dashboard</a></li>&ndash;&gt;-->
+        <!--&lt;!&ndash;<li><a href="">Reports</a></li>&ndash;&gt;-->
+        <!--&lt;!&ndash;<li><a href="">Support</a></li>&ndash;&gt;-->
+        <!--<li><a href="">Contact</a></li>-->
         <!--</ul>-->
         &copy; 2015 scripturedin
     </footer>
